--- a/stock_picking_group/view/picking_group_view.xml
+++ b/stock_picking_group/view/picking_group_view.xml
@@ -22,7 +22,7 @@
 							<!-- won't work on freshly created EMPTY groups! domain="[('type','=',type),('address_id','=',address_id),('company_id','=',company_id)]" -->
 						</page>
 						<page string="Combined Moves">
-							<field name="move_ids" nolabel="1" colspan="4" widget="many2many" readonly="1" />
+							<field name="move_lines" nolabel="1" colspan="4" widget="many2many" readonly="1" />
 						</page>
 					</notebook>
 				</form>
