enchanced compability to picking reports

--- a/stock_picking_group/view/picking_group_view.xml
+++ b/stock_picking_group/view/picking_group_view.xml
@@ -24,6 +24,9 @@
 						<page string="Combined Moves">
 							<field name="move_lines" nolabel="1" colspan="4" widget="many2many" readonly="1" />
 						</page>
+						<page string="Notes">
+							<field name="note" nolabel="1" colspan="4" />
+						</page>
 					</notebook>
 				</form>
 			</field>
