--- a/tem/view/tem_view.xml
+++ b/tem/view/tem_view.xml
@@ -617,6 +617,60 @@
 			</field>
 		</record>
 
+		<!-- tem.inspection.references -->
+		<record id="tem_inspection_references_tree" model="ir.ui.view">
+			<field name="name">tem.inspection.references.tree</field>
+			<field name="model">tem.inspection.references</field>
+			<field name="type">tree</field>
+			<field name="arch" type="xml">
+				<tree string="TEM Reference Values">
+					<field name="group_id" />
+					<field name="reference_value" />
+					<field name="unit_id" />
+					<field name="boundary_lower" />
+					<field name="boundary_upper" />
+					<field name="apply_to" />
+				</tree>
+			</field>
+		</record>
+
+		<record id="tem_inspection_references_form" model="ir.ui.view">
+			<field name="name">tem.inspection.references.form</field>
+			<field name="model">tem.inspection.references</field>
+			<field name="type">form</field>
+			<field name="arch" type="xml">
+				<form string="TEM Reference Values">
+					<field name="group_id" />
+					<newline/>
+					<field name="reference_value" />
+					<field name="unit_id" />
+					<newline/>
+					<field name="boundary_lower" />
+					<field name="boundary_upper" />
+					<newline/>
+					<field name="apply_to" />
+				</form>
+			</field>
+		</record>
+
+		<record id="tem_inspection_references_search" model="ir.ui.view">
+			<field name="name">tem.inspection.references.search</field>
+			<field name="model">tem.inspection.references</field>
+			<field name="type">search</field>
+			<field name="arch" type="xml">
+				<search string="TEM Reference Values">
+					<field name="group_id" />
+					<field name="reference_value" />
+					<field name="apply_to" />
+					<newline />
+					<group expand='0' string='Group by...' groups="base.group_extended">
+						<filter string='Equipment Group' icon="terp-stock_align_left_24"
+							domain="[]" context="{'group_by' : 'group_id'}" />
+					</group>
+				</search>
+			</field>
+		</record>
+
 		<!-- actions -->
 		<record id="open_tem_equipment_tree" model="ir.actions.act_window">
 			<field name="name">TEM Equipment</field>
@@ -644,6 +698,15 @@
 			<field name="view_mode">tree,form</field>
 			<field name="view_id" ref="tem_inspection_measurements_tree" />
 			<field name="search_view_id" ref="tem_inspection_measurements_search" />
+		</record>
+
+		<record id="open_tem_inspection_references_tree" model="ir.actions.act_window">
+			<field name="name">Reference Values</field>
+			<field name="res_model">tem.inspection.references</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">tree,form</field>
+			<field name="view_id" ref="tem_inspection_references_tree" />
+			<field name="search_view_id" ref="tem_inspection_references_search" />
 		</record>
 
 		<record id="open_tem_equipment_group_tree" model="ir.actions.act_window">
