--- a/tem/view/tem_view.xml
+++ b/tem/view/tem_view.xml
@@ -100,65 +100,61 @@
 									<group colspan="4" col="4">
 										<field name="name" colspan="4" />
 									</group>
-									<group colspan="2" col="2">
-										<separator string="Inspection" colspan="2" />
-										<field name="by_id" />
-										<field name="tool" />
-										<field name="date" />
-										<field name="next" />
-										<field name="interval_text" />
-									</group>
-									<group colspan="2" col="4">
-										<separator string="Proof of Calibration" colspan="4" />
-										<field name="description" colspan="4" />
-										<field name="result" colspan="4" />
-										<field name="maint" />
-										<field name="scrap" />
-										<separator string="Remarks" colspan="4" />
-										<field name="notes" nolabel="1" colspan="4" />
-									</group>
-
-									<group colspan="4" col="1">
-										<separator string="Measurements" />
-										<field nolabel="1" name="measurement_ids"
-											context="{'inspection_id':active_id or False}">
-											<tree string="TEM - Inspection Measurements">
-												<field name="user_id" />
+									<notebook colspan="4">
+										<page string="Inspection">
+											<group colspan="2" col="2">
+												<separator string="Inspection" colspan="2" />
+												<field name="by_id" />
+												<field name="tool" />
 												<field name="date" />
-												<field name="property" />
-												<field name="measurement" />
-												<field name="measurement_unit_id" />
-												<field name="note" />
-											</tree>
-											<form string="TEM - Inspection Measurements">
-												<field name="user_id" />
-												<field name="date" />
-												<newline />
+												<field name="next" />
+												<field name="interval_text" />
+											</group>
+											<group colspan="2" col="4">
+												<separator string="Proof of Calibration" colspan="4" />
+												<field name="description" colspan="4" />
+												<field name="result" colspan="4" />
+												<field name="maint" />
+												<field name="scrap" />
+											</group>
+											<group colspan="2" col="4">
+												<separator string="Remarks" colspan="4" />
+												<field name="notes" nolabel="1" colspan="4" />
+											</group>
+											<separator string="Measurements" colspan="4" />
+											<label colspan="4"
+												string="Please remember to add measurements on the second tab if the result is passed or failed." />
+										</page>
 
-												<group colspan="4" col="5">
-													<field name="property" />
-													<field name="measurement" />
-													<field name="measurement_unit_id" nolabel="1" />
-												</group>
-
-												<field name="note" colspan="3" />
-												<label colspan="1" string="Set note if value is 0.00" />
-											</form>
-										</field>
-
-										<field name="references_ids" colspan="4" nolabel="1"
-											readonly="1">
-											<tree string="TEM Reference Values">
-												<field name="property" />
-												<field name="reference_value" />
-												<field name="unit_id" />
-												<field name="boundary_lower" />
-												<field name="boundary_upper" />
-												<field name="apply_to" />
-											</tree>
-										</field>
-
-									</group>
+										<page string="Measurements">
+											<group colspan="4" col="1">
+												<separator string="Measurements" />
+												<field nolabel="1" name="measurement_ids"
+													context="{'inspection_id':active_id or False}">
+													<tree string="TEM - Inspection Measurements">
+														<field name="user_id" />
+														<field name="date" />
+														<field name="property" />
+														<field name="measurement" />
+														<field name="measurement_unit_id" />
+														<field name="note" />
+													</tree>
+													<form string="TEM - Inspection Measurements">
+														<field name="user_id" />
+														<field name="date" />
+														<newline />
+														<group colspan="4" col="5">
+															<field name="property" />
+															<field name="measurement" />
+															<field name="measurement_unit_id" nolabel="1" />
+														</group>
+														<field name="note" colspan="3" />
+														<label colspan="1" string="Set note if value is 0.00" />
+													</form>
+												</field>
+											</group>
+										</page>
+									</notebook>
 
 								</form>
 							</field>
@@ -395,51 +391,62 @@
 					<group colspan="4" col="4">
 						<field name="name" colspan="4" />
 					</group>
-					<group colspan="2" col="2">
-						<separator string="Inspection" colspan="2" />
-						<field name="equipment_id" on_change="on_change_equipment_id(equipment_id)" />
-						<field name="by_id" />
-						<field name="tool" />
-						<field name="date" />
-						<field name="next" />
-						<field name="interval_text" />
-					</group>
-					<group colspan="2" col="4">
-						<separator string="Proof of Calibration" colspan="4" />
-						<field name="description" colspan="4" />
-						<field name="result" colspan="4" />
-						<field name="maint" />
-						<field name="scrap" />
-						<separator string="Remarks" colspan="4" />
-						<field name="notes" nolabel="1" colspan="4" />
-					</group>
+					<notebook colspan="4">
+						<page string="Inspection">
+							<group colspan="2" col="2">
+								<separator string="Inspection" colspan="2" />
+								<field name="equipment_id" on_change="on_change_equipment_id(equipment_id)" />
+								<field name="by_id" />
+								<field name="tool" />
+								<field name="date" />
+								<field name="next" />
+								<field name="interval_text" />
+							</group>
+							<group colspan="2" col="4">
+								<separator string="Proof of Calibration" colspan="4" />
+								<field name="description" colspan="4" />
+								<field name="result" colspan="4" />
+								<field name="maint" />
+								<field name="scrap" />
+							</group>
+							<group colspan="2" col="4">
+								<separator string="Remarks" colspan="4" />
+								<field name="notes" nolabel="1" colspan="4" />
+							</group>
+							<separator string="Measurements" colspan="4" />
+							<label colspan="4"
+								string="Please remember to add measurements on the second tab if the result is passed or failed." />
+						</page>
 
-					<group colspan="4" col="1">
-						<separator string="Measurements" />
-						<field nolabel="1" name="measurement_ids"
-							context="{'inspection_id':active_id or False}">
-							<tree string="TEM - Inspection Measurements">
-								<field name="user_id" />
-								<field name="date" />
-								<field name="property" />
-								<field name="measurement" />
-								<field name="measurement_unit_id" />
-								<field name="note" />
-							</tree>
-							<form string="TEM - Inspection Measurements">
-								<field name="user_id" />
-								<field name="date" />
-								<newline />
-								<group colspan="4" col="5">
-									<field name="property" />
-									<field name="measurement" />
-									<field name="measurement_unit_id" nolabel="1" />
-								</group>
-								<field name="note" colspan="3" />
-								<label colspan="1" string="Set note if value is 0.00" />
-							</form>
-						</field>
-					</group>
+						<page string="Measurements">
+							<group colspan="4" col="1">
+								<separator string="Measurements" />
+								<field nolabel="1" name="measurement_ids"
+									context="{'inspection_id':active_id or False}">
+									<tree string="TEM - Inspection Measurements">
+										<field name="user_id" />
+										<field name="date" />
+										<field name="property" />
+										<field name="measurement" />
+										<field name="measurement_unit_id" />
+										<field name="note" />
+									</tree>
+									<form string="TEM - Inspection Measurements">
+										<field name="user_id" />
+										<field name="date" />
+										<newline />
+										<group colspan="4" col="5">
+											<field name="property" />
+											<field name="measurement" />
+											<field name="measurement_unit_id" nolabel="1" />
+										</group>
+										<field name="note" colspan="3" />
+										<label colspan="1" string="Set note if value is 0.00" />
+									</form>
+								</field>
+							</group>
+						</page>
+					</notebook>
 
 				</form>
 			</field>
