--- a/stock_deliver_internal/view/stock_view.xml
+++ b/stock_deliver_internal/view/stock_view.xml
@@ -1,20 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-     	<record id="action_int_picking_move" model="ir.actions.act_window">
-            <field name="name">Internal Moves</field>
-            <field name="res_model">stock.move</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-            <field name="domain">['|','&amp;',('picking_id','=',False),('location_dest_id.usage', 'in', ['internal']),'&amp;',('picking_id','!=',False),('picking_id.type','=','internal')]</field>
-            <field name="view_id" ref="stock.view_move_tree_reception_picking"/>
-            <field name="context" eval="'{\'search_default_receive\':1}"/>
-            <field name="search_view_id" ref="stock.view_move_search_reception_outcoming_picking"/>
-            <field name="help">You will find in this list all products you have to deliver to internal locations. You can process the deliveries directly from this list using the buttons on the right of each line. You can filter the products to deliver by customer, products or sale order (using the Origin field).</field>
-        </record>
-        
-        <menuitem action="action_int_picking_move" id="menu_action_pdct_int" parent="stock.menu_stock_products_moves" sequence="3"/>
-        
+
+		<record id="view_move_search_reception_outcoming_picking"
+			model="ir.ui.view">
+			<field name="name">stock.move.outgoing.search.stckdlvrint</field>
+			<field name="model">stock.move</field>
+			<field name="type">search</field>
+			<field eval="6" name="priority" />
+			<field name="arch" type="xml">
+				<search string="Stock Moves">
+					<group col="8" colspan="4">
+						<filter icon="terp-go-today" string="Today"
+							domain="[('date','&lt;=',time.strftime('%%Y-%%m-%%d 23:59:59')),('date','&gt;=',time.strftime('%%Y-%%m-%%d 00:00:00'))]"
+							help="Orders planned for today" />
+						<separator orientation="vertical" />
+						<filter icon="terp-gtk-go-back-rtl" name="receive" string="To Do"
+							domain="[('state','in',('confirmed','assigned'))]" help="Stock to be delivered (available or not)" />
+						<filter icon="terp-check" name="available" string="Available"
+							domain="[('state','in',('assigned',))]" help="Stock available to be delivered" />
+						<filter icon="terp-gtk-go-back-rtl" name="unfinished"
+							string="Unfinished"
+							domain="[('state','in',('draft','waiting','confirmed','assigned'))]"
+							help="Unfinished business (neither done nor cancelled)" />
+						<filter icon="terp-dialog-close" name="received" string="Done"
+							domain="[('state','=','done')]" />
+						<separator orientation="vertical" />
+						<field name="origin" />
+						<field name="partner_id" string="Partner" />
+						<field name="product_id" />
+						<field name="picking_id" />
+					</group>
+					<newline />
+					<group expand="0" string="Extended Filters..." groups="base.group_extended">
+						<field name="tracking_id" context="{'tracking_id': self}" />
+						<field name="prodlot_id" />
+					</group>
+					<newline />
+					<group expand="0" string="Group By..." colspan="4" col="8"
+						groups="base.group_extended">
+						<filter string="Customer" icon="terp-personal" domain="[]"
+							context="{'group_by':'partner_id'}" />
+						<separator orientation="vertical" />
+						<filter string="Product" icon="terp-accessories-archiver"
+							domain="[]" context="{'group_by':'product_id'}" />
+						<filter string="Order" icon="terp-gtk-jump-to-rtl" domain="[]"
+							context="{'group_by':'origin'}" />
+						<filter string="State" icon="terp-stock_effects-object-colorize"
+							domain="[]" context="{'group_by':'state'}" />
+						<separator orientation="vertical" />
+						<filter string="Order Date" icon="terp-go-month" domain="[]"
+							context="{'group_by':'date'}" />
+					</group>
+				</search>
+			</field>
+		</record>
+
+		<record id="view_move_tree_reception_picking" model="ir.ui.view">
+			<field name="name">stock.move.tree.stckdlvrint</field>
+			<field name="model">stock.move</field>
+			<field name="type">tree</field>
+			<field name="priority" eval="6" />
+			<field name="arch" type="xml">
+				<tree colors="grey:state in ('cancel')" string="Moves">
+					<field name="picking_id" string="Reference" />
+					<field name="origin" />
+					<field name="partner_id" string="Partner" />
+					<field name="product_id" />
+					<field name="product_qty" />
+					<field name="product_uom" string="UoM" />
+					<button name="%(stock.move_scrap)d" string="Scrap Products"
+						type="action" icon="gtk-convert" context="{'scrap': True}"
+						states="draft,waiting,confirmed,assigned" groups="base.group_extended" />
+					<field name="prodlot_id" groups="base.group_extended" />
+					<button name="%(stock.track_line)d" string="Split in production lots"
+						type="action" icon="terp-stock_effects-object-colorize"
+						attrs="{'invisible': [('prodlot_id','&lt;&gt;',False)]}" states="draft,waiting,confirmed,assigned,done"
+						context="{'default_use_exist': picking_id.type=='in'}" groups="base.group_extended" />
+					<field name="tracking_id" groups="base.group_extended" />
+					<button name="setlast_tracking" string="Put in current pack"
+						type="object" attrs="{'invisible': [('tracking_id','&lt;&gt;',False)]}"
+						groups="base.group_extended" icon="terp-stock_effects-object-colorize"
+						states="draft,assigned,confirmed,done" />
+					<button name="%(stock.split_into)d" string="Put in a new pack"
+						type="action" groups="base.group_extended" icon="terp-stock_effects-object-colorize"
+						states="draft,assigned,confirmed,done" />
+					<field name="date" />
+					<field name="state" />
+					<button name="action_assign" states="confirmed" string="Set Available"
+						type="object" icon="gtk-yes" />
+					<button name="%(stock.action_partial_move_server)d" string="Process"
+						type="action" states="confirmed,assigned" icon="gtk-go-forward" />
+				</tree>
+			</field>
+		</record>
+
+		<record id="action_int_picking_move" model="ir.actions.act_window">
+			<field name="name">Internal Moves</field>
+			<field name="res_model">stock.move</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">tree,form</field>
+			<field name="domain">[('picking_id','!=',False),('picking_id.type','=','internal')]
+			</field>
+
+			<field name="view_id" ref="view_move_tree_reception_picking" />
+            <field name="context">{'search_default_unfinished': 1}</field>
+			<field name="search_view_id" ref="view_move_search_reception_outcoming_picking" />
+			<field name="help">You will find in this list all products you have to
+				deliver to internal locations. You can process the deliveries
+				directly from this list using the buttons on the right of each line.
+				You can filter the products to deliver by customer, products or sale
+				order (using the Origin field).
+			</field>
+		</record>
+
+		<menuitem action="action_int_picking_move" id="menu_action_pdct_int"
+			parent="stock.menu_stock_products_moves" sequence="3" />
+
 	</data>
 </openerp>
