--- a/stock_scheduled_dates/view/stock_view.xml
+++ b/stock_scheduled_dates/view/stock_view.xml
@@ -9,7 +9,7 @@
 			<field name="type">tree</field>
 			<field name="inherit_id" ref="stock.view_move_tree_reception_picking" />
 			<field name="arch" type="xml">
-				<xpath expr="//field[@name='date']" position="after">
+				<xpath expr="//field[@name='product_uom']" position="after">
 					<field name="date_expected" />
 				</xpath>
 			</field>
@@ -36,7 +36,7 @@
 			<field name="type">form</field>
 			<field name="inherit_id" ref="stock.view_picking_out_form" />
 			<field name="arch" type="xml">
-				<xpath expr="//field[@name='move_lines']/tree/field[@name='date']"
+				<xpath expr="//field[@name='move_lines']/tree/field[@name='product_uom']"
 					position="after">
 					<field name="date_expected" />
 				</xpath>
