--- a/stock_move_account_report/view/stock_view.xml
+++ b/stock_move_account_report/view/stock_view.xml
@@ -19,24 +19,14 @@
 			</field>
 		</record>
 
-		<record id="view_stockmove_accountmove_report_search" model="ir.ui.view">
-			<field name="name">view.stockmove.accountmove.report.search</field>
-			<field name="model">view.stockmove.accountmove.report</field>
-			<field name="type">search</field>
-			<field name="arch" type="xml">
-				<search>
-				</search>
-			</field>
+		<record id="action_stockmove_accountmove_report" model="ir.actions.act_window">
+			<field name="name">Stock / Account Moves Analysis (by date)</field>
+			<field name="res_model">view.stockmove.accountmove.report</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">tree</field>
 		</record>
+		<menuitem action="action_stockmove_accountmove_report" id="menu_stockmove_accountmove_report"
+			parent="stock.next_id_61" sequence="4" />
 
- <record id="action_stockmove_accountmove_report" model="ir.actions.act_window">
-        <field name="name">Stock / Account Moves Analysis (by date)</field>
-        <field name="res_model">view.stockmove.accountmove.report</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree</field>
-<!--         <field name="search_view_id"  ref="view_stockmove_accountmove_report_search"/>  -->
-    </record>
-    <menuitem action="action_stockmove_accountmove_report" id="menu_stockmove_accountmove_report" parent="stock.next_id_61" sequence="4"/>
-    
 	</data>
 </openerp>
